<resources>
    <string name="app_name">elderCare</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="OpenDrawer">Open Navigation Drawer</string>
    <string name="CloseDrawer">Close Navigation Drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resend">RESEND</string>
    <string name="did_not_receive_the_otp">Did not receive the OTP ?</string>
    <string name="verify">VERIFY</string>
    <string name="code_is_sent_to">Code is sent to </string>
    <string name="verify_your_mobile_number">Please verify your mobile number</string>
    <string name="_1">1</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log-in or Register</string>
    <string name="action_sign_in_short">Log-in</string>
    <string name="welcome">Welcome </string>
    <string name="invalid_username">Invalid username!</string>
    <string name="invalid_password">Password must be greater than 5 characters!</string>
    <string name="login_failed">Login failed!</string>
    <string name="eldercare">elderCare</string>
    <string name="we_have_sent_4_digit_verification_code_to_your_mobile_number">We have sent 4-digit verification code to your mobile number</string>
    <string name="enter_otp">Enter OTP :</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="media">Media</string>
    <string name="gallery">Gallery</string>
    <string name="contact_us">Contact Us</string>
    <string name="routine_pathology">Routine Pathology</string>
    <string name="blood_sugar_fasting">Blood Sugar (FASTING)</string>
    <string name="blood_sugar_post_meal">Blood Sugar (POST MEAL)</string>
    <string name="hb1ac">Hb1ac</string>
    <string name="lipid_profile">Lipid Profile</string>
    <string name="thyroid">Thyroid</string>
    <string name="kidney_function_test">Kidney Function Test</string>
    <string name="liver_function_test">Liver Function Test</string>
    <string name="ecg">ECG</string>
    <string name="stress_test">Stress Test</string>
    <string name="others_please_specify">Other (Please specify)</string>
    <string name="_1_enter_here"> Enter here</string>
    <string name="physiotherapy">Physiotherapy</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="next">NEXT</string>
    <string name="eldercare1">elderCare</string>
    <string name="eldercare2">elderCare</string>
    <string name="welcome_to_eldercare">Welcome to elderCare !</string>
    <string name="select_user_aff">Please select the mode in which you want to continue -</string>
    <string name="user">User</string>
    <string name="affiliate">Affiliate</string>
    <string name="eldercare3">elderCare</string>
    <string name="physiotherapy1">Physiotherapy</string>
    <string name="many_times_there_is_a_need_of_a_physiotherapist_after_operations_or_alleviate_pain_and_deformities_due_to_aging_we_have_a_panel_of_experienced_physiotherapists_to_address_your_needs_nphysiotherapists_are_available_for_clinic_and_home_visit_both_the_services_can_be_availed_as_per_your_convenience">Many times there is a need of a physiotherapist after operations or alleviate pain and deformities due to aging.We have a panel of experienced physiotherapists to address your needs.\nPhysiotherapists are available for clinic and home visit both.The services can be availed as per your convenience.</string>
    <string name="request_a_physiotherapist">Request a Physiotherapist</string>
    <string name="send_request">Send request</string>
    <string name="services1">Services</string>
    <string name="medical_devices">Medical Devices</string>
    <string name="support_station_extends_facility_to_purchase_essential_medical_devices_at_affordable_rate_we_have_onboard_device_suppliers_as_affiliate_these_suppliers_shall_fulfill_your_requirements_n_nsubmit_your_requirements_in_advance_and_get_the_delivery_at_your_doorstep">Support Station extends facility to purchase essential medical devices at affordable rate.We have onboard device suppliers as affiliate.These suppliers shall fulfill your requirements. \n\nSubmit your requirements in advance and get the delivery at your doorstep.</string>
    <string name="request_a_medical_device">Request a Medical device</string>
    <string name="send_request1">Send request</string>
    <string name="please_specify_medical_device">Please specify medical device</string>
    <string name="header_image">Header Image</string>
    <string name="eldercare4">eldercare</string>
    <string name="eldercare_gmail_com">elderCare@gmail.com</string>
    <string name="counseller">Counsellor</string>
    <string name="registration_for_counseller">Registration for Counsellor</string>
    <string name="mobile_number">Mobile number</string>
    <string name="qualification">Qualification</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="experience_in_years">Experience in Years</string>
    <string name="submit">Submit</string>
    <string name="affilate">Affiliate</string>
    <string name="registration_for_medical_device_supplier">Registration for \n Medical Device Supplier</string>
    <string name="mobile_number1">Mobile number</string>
    <string name="registration_number">Registration number</string>
    <string name="name_of_the_owner">Name of the Owner</string>
    <string name="email_id1">Email Address</string>
    <string name="name_of_the_firm">Name of the firm</string>
    <string name="gst_number">GST number</string>
    <string name="submit1">Submit</string>
    <string name="physiotherapy2">Physiotherapy</string>
    <string name="registration_for_physiotherapy">Registration for Physiotherapy</string>
    <string name="mobile_number3">Mobile number</string>
    <string name="qualification1">Qualification</string>
    <string name="docname">Full Name</string>
    <string name="email_id2">Email Address</string>
    <string name="first_name1">First Name</string>
    <string name="experience_in_years1">Experience in Years</string>
    <string name="submit2">Submit</string>
    <string name="eldercare5">elderCare</string>
    <string name="care_that_feels_like_family">Care that feels like family</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="eldercare6">elderCare</string>
    <string name="welcome1">Welcome !</string>
    <string name="signup_and_get_started">Sign-up and get started!</string>
    <string name="please_verify_your_nmobile_number">Please verify your \nMobile number</string>
    <string name="_10_digit_mobile_number">10 Digit Mobile number</string>
    <string name="_91">+91</string>
    <string name="_10_digit_mobile_number1">10 Digit Mobile number</string>
    <string name="get_otp">Get OTP</string>
    <string name="by_using_our_app_you_agree_to_our">By using our app, you agree to our</string>
    <string name="eldercare7">elderCare</string>
    <string name="terms_and_conditions_n_amp_n_privacy_policy">Terms and Conditions\n &amp; \nPolicies</string>
    <string name="affiliate1">Affiliate</string>
    <string name="registration_for_doctor">Registration for Doctor</string>
    <string name="mobile_number2">Mobile number</string>
    <string name="qualification2">Qualification</string>
    <string name="last_name2">Last Name</string>
    <string name="email_id3">Email Address</string>
    <string name="first_name2">First Name</string>
    <string name="experience_in_years2">Experience in Years</string>
    <string name="submit4">Submit</string>
    <string name="eldercare8">elderCare</string>
    <string name="care_that_feels_like_family2">Care that feels like family</string>
    <string name="doctor">Doctor</string>
    <string name="physiotherapist">Physiotherapist</string>
    <string name="counsellor">Counsellor</string>
    <string name="medical_device_supplier">Medical device supplier</string>
    <string name="affiliate2">Affiliate</string>
    <string name="register_as">Register as : </string>
    <string name="doctor_consultation">Doctor Consultation</string>
    <string name="physiotherapist1">Physiotherapist</string>
    <string name="counsellor1">Counsellor</string>
    <string name="medical_device_supplier1">Medical device supplier</string>
    <string name="services2">Services</string>
    <string name="request_for">Request for : </string>
    <string name="vision">Vision</string>
    <string name="home_paragraph1">To develop a happy and confident aging population by reducing their dependence.</string>
    <string name="mission">Mission</string>
    <string name="home_paragraph">To provide hasslefree assistance to make one\'s life pleasurable with a focus on good health and help them lead carefree and enjoyable life. \n• Care for comfort is our motto.\n• Offering regular medical/non-medical services is our goal.\n• Establishing network of specialist experts for care is our idea.</string>
    <string name="counsellor_paragraph">Loneliness in oldage is a road block in leading happy life. This leads to detachment with outside world. Drifting away from relatives and loved ones drive them to shelled life. Emotional stubbornness does not allow them to accept the inevitable change.\n There is strong need of psychologist to get these individuals out of woods. Structured dialogue and periodic session can bring about the targeted change in one\'s persona.\n We have experienced counsellors to address such needs. Feel free to talk to them at your convenience.</string>
    <string name="home1">Home</string>
    <string name="eldercare9">elderCare</string>
    <string name="hello">Hello!</string>
    <string name="please_enter_the_details"> Please enter details to register -</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email_id">Enter email address</string>
    <string name="enter_date_of_birth">Double click for DOB</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="enter_weigth_in_kgs">Double click for Weight</string>
    <string name="enter_height">Double click for Height</string>
    <string name="next1">NEXT</string>
    <string name="media1">Media</string>
    <string name="upload_medical_history">Upload Medical History</string>
    <string name="arthiritis">Arthritis</string>
    <string name="diabetes">Diabetes</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="heart_disease">Heart Disease</string>
    <string name="dementia">Dementia</string>
    <string name="respiratory_disease">Respiratory Disease</string>
    <string name="alzheimer_s_disease">Alzheimer\'s Disease</string>
    <string name="osteoporosis">Osteoporosis</string>
    <string name="obesity">Obesity</string>
    <string name="mobility">Mobility</string>
    <string name="c_license_number">Counsellor License number</string>
    <string name="hiiiint">Name</string>
</resources>