<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Patho"
    android:background="@color/white">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar7"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:backgroundTint="@color/black"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/eldercare1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/routine_pathology"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar7" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="411dp"
        android:layout_height="352dp"
        android:paddingStart="20dp"
        android:layout_marginTop="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/listDivider" />

            <CheckBox
                android:id="@+id/cb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbarSize="20dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:text="@string/blood_sugar_fasting" />

            <CheckBox
                android:id="@+id/cb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbarSize="10dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:text="@string/blood_sugar_post_meal" />

            <CheckBox
                android:id="@+id/cb3"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbarSize="10dp"
                android:text="@string/hb1ac" />

            <CheckBox
                android:id="@+id/cb4"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbarSize="10dp"
                android:text="@string/lipid_profile" />

            <CheckBox
                android:id="@+id/cb5"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbarSize="10dp"
                android:text="@string/thyroid" />

            <CheckBox
                android:id="@+id/cb6"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbarSize="10dp"
                android:text="@string/kidney_function_test" />

            <CheckBox
                android:id="@+id/cb7"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbarSize="10dp"
                android:text="@string/liver_function_test" />

            <CheckBox
                android:id="@+id/cb8"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:scrollbarSize="10dp"
                android:text="@string/ecg"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/cb9"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbarSize="10dp"
                android:text="@string/stress_test" />

            <TextView
                android:id="@+id/cb10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:scrollbarSize="10dp"
                android:layout_marginStart="30dp"
                android:text="@string/others_please_specify"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/other"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:background="@drawable/edittext_round"
                android:backgroundTint="#99C4C4C4"
                android:ems="10"
                android:layout_marginStart="30dp"
                android:fontFamily="sans-serif"
                android:hint="@string/_1_enter_here"
                android:inputType="textPersonName"
                android:textSize="20dp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/physiotherapy"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="366dp"
        android:textColor="@color/black"
        android:layout_height="136dp"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <RadioButton
            android:id="@+id/radiobut1"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/radiobut2"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no" />

    </RadioGroup>

    <Button
        android:id="@+id/PhysButton"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="50dp"
        android:drawableRight="@drawable/next"
        android:text="@string/next"
        android:textSize="20sp"
        android:background="@drawable/round_black"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>