<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:padding="14dp"
    android:background="@color/black"
    android:gravity="bottom"
    android:orientation="vertical"
    >
    <ImageView
        android:scaleType="centerCrop"
        android:id="@+id/nav_user_photo"
        android:layout_width="108dp"
        android:layout_height="100dp"
        android:contentDescription="@string/header_image"
        android:src="@drawable/hand" />

    <TextView
        android:id="@+id/nav_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eldercare4"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nav_user_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eldercare_gmail_com"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>