<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".RegForCo">

    <EditText
        android:id="@+id/clicense"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/edittext_round"
        android:backgroundTint="#99C4C4C4"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/c_license_number"
        android:inputType="number"
        android:paddingStart="30dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cobutt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:backgroundTint="@color/black"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="11dp"
        android:text="@string/eldercare6"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/affiliate1"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/registration_for_counseller"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/comob"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_round"
        android:backgroundTint="#99C4C4C4"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/mobile_number3"
        android:inputType="phone"
        android:paddingStart="30dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/comail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/coname"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_round"
        android:backgroundTint="#99C4C4C4"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/hiiiint"
        android:inputType="textPersonName"
        android:paddingStart="30dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/comob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/comail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_round"
        android:backgroundTint="#99C4C4C4"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email_id2"
        android:inputType="textEmailAddress"
        android:paddingStart="30dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/coqual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/coexp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_round"
        android:backgroundTint="#99C4C4C4"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/experience_in_years1"
        android:inputType="number"
        android:paddingStart="30dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/clicense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/coqual"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_round"
        android:backgroundTint="#99C4C4C4"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/qualification1"
        android:inputType="textPersonName"
        android:paddingStart="30dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/coexp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cobutt"
        android:layout_width="186dp"
        android:layout_height="68dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_black"
        android:text="@string/submit2"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>